import("//build/toolchain/gcc_toolchain.gni")
import("//build/config/sysroot.gni")

gcc_toolchain("target") {
  cc = getenv("CC")
  cxx = getenv("CXX")
  ar = getenv("AR")
  nm = getenv("NM")
  ld = cxx

  extra_cflags = getenv("CFLAGS")
  extra_cppflags = getenv("CPPFLAGS")
  extra_cxxflags = getenv("CXXFLAGS")
  extra_ldflags = getenv("LDFLAGS")

    toolchain_args = {
    current_cpu = getenv("ARCH")
    current_os = "linux"
    is_clang = true
  }
}

gcc_toolchain("host") {
  cc = getenv("BUILD_CC")
  cxx = getenv("BUILD_CXX")
  ar = getenv("BUILD_AR")
  nm = getenv("BUILD_NM")
  ld = cxx

  extra_cflags = getenv("BUILD_CFLAGS")
  extra_cppflags = getenv("BUILD_CPPFLAGS")
  extra_cxxflags = getenv("BUILD_CXXFLAGS")
  extra_ldflags = getenv("BUILD_LDFLAGS")

  toolchain_args = {
    current_cpu = host_cpu
    current_os = host_os
    is_clang = true
  }
}
